# Cortex

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  alembic.ini  justfile  pyproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug.md  feature.md
.github/workflows/: ci.yml  eval.yml  release.yml
Docs/: API.md  ARCHITECTURE.md  DATA_MODEL.md  RETRIEVAL_AND_ML.md  ROADMAP.md
apps/admin/: README.md  package-lock.json  package.json
apps/admin/app/: TenantBar.tsx  globals.css  layout.tsx  page.tsx
apps/admin/app/processes/: page.tsx
apps/admin/app/search/: page.tsx
apps/admin/app/sources/: page.tsx
apps/admin/lib/: api.ts
apps/api/: Dockerfile  pyproject.toml
apps/api/src/cortex/api/: __init__.py  ask.py  auth.py  config.py  deps.py  ingest.py  main.py  processes.py  ratelimit.py  search.py  skills.py  sources.py
apps/workers/: Dockerfile  pyproject.toml
apps/workers/src/cortex/workers/: __init__.py  deadletter.py  enrich.py  freshness_sweep.py  ingest.py  main.py  pipeline.py  queue.py
docs/: API.md  ENGINEERING-WORKFLOW.md  INGESTION.md  PRD.md  ROADMAP.md  SCALE.md  TEST-STRATEGY.md
docs/ADR/: 0001-postgres-edge-list-graph.md  0002-bge-small-base-embedding.md  README.md
docs/plans/: M1-PLAN.md  M2-PLAN.md  M3-PLAN.md  M4-PLAN.md  M5-PLAN.md  M6-PLAN.md
infra/: docker-compose.yml
infra/grafana/dashboards/: .gitkeep
infra/grafana/provisioning/datasources/: prometheus.yml  tempo.yml
infra/k8s/: README.md  api.yaml  config.yaml  migrate.yaml  worker.yaml
infra/otel/: collector-config.yaml
infra/prometheus/: prometheus.yml
infra/tempo/: tempo.yaml
infra/terraform/: README.md  main.tf  outputs.tf  variables.tf  versions.tf
migrations/: env.py
migrations/versions/: 0001_initial.py  0002_m0_core_tables.py  0003_chunks_fts.py  0004_m2_graph_process.py  0005_m3_freshness.py  0006_m4_rls.py  0007_api_keys.py  0008_sources_unique.py
scripts/: load_test.py  train_embeddings.py
tests/: conftest.py
tests/eval/: conftest.py  test_agent_demo.py  test_freshness_gate.py  test_process_gate.py  test_regression_canary.py  test_retrieval_gate.py
tests/fixtures/: .gitkeep
tests/integration/: conftest.py  test_ask_api.py  test_auth.py  test_bm25.py  test_cross_tenant_leakage.py  test_egress_ingest.py  test_freshness_change.py  test_freshness_repo.py  test_freshness_schema.py  test_freshness_serving.py  test_freshness_sweep_job.py  test_graph_process_schema.py  test_ingest_enrichment.py  test_ingest_review_api.py  test_ingestion_idempotency.py  test_processes_api.py  test_ratelimit_api.py  test_ratelimit_redis.py  test_repository.py  test_rls_setup.py  test_search_api.py  test_search_e2e.py  test_search_load.py  test_skills_api.py  test_sources_api.py  test_tenant_isolation.py  test_worker_pipeline.py
tests/unit/: test_ab_gate.py  test_api_health.py  test_blurb.py  test_chunking.py  test_contradiction.py  test_egress_acquire.py  test_embedding.py  test_embedding_eval.py  test_eval_gate.py  test_external_connectors.py  test_faithfulness.py  test_finetuned_embedder.py  test_fusion.py  test_github_connector.py  test_graph_extraction.py  test_hard_negatives.py  test_harness.py  test_hybrid.py  test_llm_gateway.py  test_metrics.py  test_process_extraction.py  test_process_metrics.py  test_process_validation.py  test_qdrant_sharding.py  test_ratelimit.py  test_reference_agent.py  test_rerank.py  test_resolution.py  test_sample_connector.py  test_synthetic_queries.py  test_worker_lanes_dlq.py
