# Cortex — workspace root.
# This root is a *virtual* project (tool.uv.package = false): it is not built or
# published; it exists to define the uv workspace, aggregate the member packages,
# and hold shared tooling config (ruff / mypy / pytest / coverage).
#
# Members live under apps/* and packages/* and each contribute to the `cortex.*`
# import namespace via PEP 420 namespace packages.

[project]
name = "cortex"
version = "0.0.0"
description = "Cortex — the Company Brain. Structured, current, citeable, agent-executable company knowledge."
requires-python = ">=3.12"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "xpushkal" }]
dependencies = [
    "cortex-api",
    "cortex-workers",
    "cortex-connectors",
    "cortex-retrieval",
    "cortex-knowledge",
    "cortex-eval",
    "cortex-storage",
    "cortex-obs",
]

[dependency-groups]
dev = [
    "ruff>=0.6",
    "mypy>=1.11",
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "coverage[toml]>=7.6",
    "httpx>=0.27",
    "anyio>=4.4",
    "testcontainers>=4.8",
    "pip-audit>=2.7",
    "pre-commit>=3.8",
]

[tool.uv]
package = false

[tool.uv.workspace]
members = ["apps/*", "packages/*"]
exclude = ["apps/admin"]  # Next.js (Node) app, not a uv member

[tool.uv.sources]
cortex-api = { workspace = true }
cortex-workers = { workspace = true }
cortex-connectors = { workspace = true }
cortex-retrieval = { workspace = true }
cortex-knowledge = { workspace = true }
cortex-eval = { workspace = true }
cortex-storage = { workspace = true }
cortex-obs = { workspace = true }

# ---------------------------------------------------------------------------
# Linting & formatting (ruff)
# ---------------------------------------------------------------------------
[tool.ruff]
target-version = "py312"
line-length = 100
src = ["apps", "packages", "tests", "scripts"]

[tool.ruff.lint]
select = [
    "E", "F", "W",      # pyflakes / pycodestyle
    "I",                 # isort
    "UP",                # pyupgrade
    "B",                 # bugbear
    "C4",                # comprehensions
    "SIM",               # simplify
    "TID",               # tidy imports
    "RUF",               # ruff-specific
]
ignore = ["B008"]        # FastAPI uses function calls in defaults (Depends)

[tool.ruff.lint.isort]
known-first-party = ["cortex"]

# ---------------------------------------------------------------------------
# Type checking (mypy) — strict on the reusable packages, lenient on tests.
# ---------------------------------------------------------------------------
[tool.mypy]
python_version = "3.12"
files = ["apps", "packages", "scripts"]
namespace_packages = true
explicit_package_bases = true
mypy_path = [
    "apps/api/src",
    "apps/workers/src",
    "packages/connectors/src",
    "packages/retrieval/src",
    "packages/knowledge/src",
    "packages/eval/src",
    "packages/storage/src",
    "packages/obs/src",
]
strict = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_defs = false

# Optional ML deps (the `ml`/`onnx` extras) ship no type stubs.
[[tool.mypy.overrides]]
module = ["sentence_transformers.*", "torch.*", "onnxruntime.*"]
ignore_missing_imports = true

# ---------------------------------------------------------------------------
# Tests & coverage
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
asyncio_mode = "auto"
# One event loop for the whole session so cached async engines/clients (which bind
# to the loop active at first use) stay valid across tests.
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
addopts = "-ra --strict-markers"
markers = [
    "integration: needs live Postgres/Qdrant/Redis (compose or testcontainers)",
    "eval: golden-set regression checks (the CI quality gate)",
    "load: load/performance tests, not run in PR CI",
]

[tool.coverage.run]
branch = true
source = ["cortex"]

[tool.coverage.report]
show_missing = true
skip_covered = true
# Start at 70% per TEST-STRATEGY.md; raise over time.
fail_under = 70
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "@(abc\\.)?abstractmethod",
]
