[project]
name = "cortex-api"
version = "0.0.0"
description = "Cortex serving plane: FastAPI /ask /search /processes /skills."
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.114",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "pydantic-settings>=2.4",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "asyncpg>=0.29",
    "redis>=5.0",
    "prometheus-client>=0.20",
    "opentelemetry-sdk>=1.27",
    "opentelemetry-instrumentation-fastapi>=0.48b0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cortex"]
