[project]
name = "cortex-workers"
version = "0.0.0"
description = "Cortex ingestion plane: arq workers running chunk -> contextualize -> embed -> extract -> upsert."
requires-python = ">=3.12"
dependencies = [
    "arq>=0.26",
    "redis>=5.0",
    "pydantic>=2.7",
    "pydantic-settings>=2.4",
    "cortex-storage",
    "cortex-retrieval",
    "cortex-connectors",
    "cortex-obs",
]

[tool.uv.sources]
cortex-storage = { workspace = true }
cortex-retrieval = { workspace = true }
cortex-connectors = { workspace = true }
cortex-obs = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cortex"]
